--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
   },
   "packageManager": "pnpm@8.1.0",
   "engines": {
-    "node": "^18.12.1",
-    "pnpm": "^8.1.0"
+    "node": "^18.12.1"
   }
 }
